RnBeads 1.7.1
=============

 * Several improvements in age prediction module
 * Several minor bug fixes

RnBeads 1.5.1
=============

 * Reference-based cell type composition estimation now uses the 50,000 most variable sites by default.
 * Minor bug fixes

RnBeads 1.3.8
=============

 * Added age prediction from 450K and bisulfite data to inference module

RnBeads 1.3.7
=============

 * Subsampling for reporting and plotting methylation values distributions in filtering
   report to reduce memory footprint.

RnBeads 1.3.6
=============

 * Support for Illumina EPIC array and related bugfixes
 * Added a section on whitelist and blacklist in the Preprocessing module

RnBeads 1.3.5
=============

 * Fixes with ggplot in 450K array QC plotting
 * Added an option 'differential.report.sites' to decrease runtime by skipping the differential site methylation section in the report

RnBeads 1.3.4
=============

 * Added support for Illumina EPIC array

RnBeads 1.3.3
=============

 * Added 'smooth.profile' parameter to rnb.plot.locus.profile function

RnBeads 1.3.2
=============

 * Performance and memory improvements during loading, qc and preprocessing of large bisulfite-derived RnBSets
 * Added optional arguments to meth() and covg() allowing for partial retrieval of methylation and coverage information from RnBSets. Particularly makes sense for large, disk-based datasets.
 * Added option "disk.dump.bigff.finalizer" for setting the finalizer for temporary BigFfMat objects

RnBeads 1.3.1
=============

 * Added "remove.regions" function for RnBSet class
 * summarize.regions now summarizes for each sample individually in order to reduce memory consumption for large WGBS datasets
 * import.skip.object.check option for keeping the memory profile low while loading huge datasets
 * NA sites (filtering.missing.value.quantile) are now removed even if they were previously masked (filtering.low.coverage.masking)