@@ -2,6 +2,7 @@ RnBeads 1.7.1
 =============
 
  * Several improvements in age prediction module
+ * Added conversion from minfi raw dataset to RnBeadRawSet
  * Several minor bug fixes
 
 RnBeads 1.5.1
